# cxl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  gen_reflect.py
include/cxl/: reflection.hpp  stdio_filebuf.hpp  str_lit.hpp  type_traits.hpp  variant.hpp
include/cxl/reflection/: csv.hpp  reflection_impl.hpp
include/cxl/type_traits/: function_traits.hpp  traits.hpp  tuple_traits.hpp  variant_traits.hpp
include/cxl/variant/: compare.hpp  io.hpp  recursive_wrapper.hpp  variant.hpp  visitor.hpp
include/cxutil/: reflection.hpp  stdio_filebuf.hpp  str_lit.hpp  type_traits.hpp  variant.hpp
include/cxutil/reflection/: reflection_impl.hpp
include/cxutil/type_traits/: function_traits.hpp  traits.hpp  tuple_traits.hpp  variant_traits.hpp
include/cxutil/variant/: compare.hpp  io.hpp  recursive_wrapper.hpp  variant.hpp  visitor.hpp
test/: main.cpp  main.hpp
